# sbot_v2

./: .env-tests  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  env.py  pyproject.toml
alembic/: env.py
alembic/versions/: 62bdd93a4a70_initial_migration.py  654d7e976fec_fix_orders_table_nullable_fields.py  e4488b4b2e0f_add_market_field_to_dborder.py  f8d66dc4cc71_add_orders_table.py
app/: bootstrap.sh  main.py
app/api/: __init__.py  base.py  binance.py  coinex.py
app/api/client/: binance.py  coinex.py  errors.py
app/bots/: bot.py
app/common/: common.py
app/config/: config.py  database.py  dynamodb.py  exchange_decimals.py
app/models/: balance.py  common.py  enums.py  filled.py  order.py  price.py
app/workers/: bot.py
docker/: Dockerfile
scripts/: download.py  update_config.py
tests/: conftest.py  fixtures.py  test_coinex_api.py  test_dynamodb.py  test_executed_orders.py
tests/bots/: test_bot_init.py
tests/config/: test_config.py  test_db_config.py
tests/fake_exchange/: coinex.py  db.py  models.py  test_fake_exchange.py
tests/fake_exchange/data/: BTC_USDT.txt
