[tool.poetry]
name = "sbot-v2"
version = "0.1.0"
description = ""
authors = ["Luis tejada <luis.tejada.consultant@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mariadb = "^1.1.11"
sqlalchemy = "^2.0.36"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
