[tool.poetry]
name = "sbot-v2"
version = "0.1.0"
description = ""
authors = ["Luis tejada <luis.tejada.consultant@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mariadb = "^1.1.11"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"
pre-commit = "^4.0.1"
pydantic = "^2.10.3"
isort = "^5.13.2"
black = "^24.10.0"
fastapi = "^0.115.6"
requests = "^2.32.3"
uvicorn = "^0.32.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
