[tool.poetry]
name = "sbot-v2"
version = "0.1.0"
description = ""
authors = ["Luis tejada <luis.tejada.consultant@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"
pre-commit = "^4.0.1"
pydantic = "^2.10.3"
isort = "^5.13.2"
black = "^24.10.0"
fastapi = "^0.115.6"
requests = "^2.32.3"
uvicorn = "^0.32.1"
pytest = "^8.3.4"
boto3 = "^1.35.84"
boto3-stubs = "^1.35.85"
flake8 = "^7.1.1"
freezegun = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
